examples/test/testpolicy1896.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1896
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key14: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value39
          key11: value22
      podSelector:
        matchLabels:
          key32: value32
          key8: value39
          key46: value3
